Lower padding on sponsors, fix IE11 layout bugs

--- a/assets/styles/home.styl
+++ b/assets/styles/home.styl
@@ -408,30 +408,41 @@ $home-light-section {
     display: inline-block;
     vertical-align: middle;
     max-width: 100%;
+    box-sizing: border-box;
 
     img {
       max-width: 100%;
     }
   }
 
+  .helper-link-wide img {
+    width: 100%;
+  }
+
+  // Tall helper links could cause some weird bugs on mobile
+  // Probably best to avoid for now!
+  .helper-link-tall img {
+    height: 100%;
+  }
+
   // Name, width, height, padding
-  $sponsorSizes = (cohost 1200px 800px 30px) (tera 600px 400px 30px) (giga 300px 200px 15px) (mega 150px 100px 10px) (kilo 75px 50px 5px);
+  $sponsorSizes = (cohost 1200px 800px 30px) (tera 600px 400px 20px) (giga 300px 200px 15px) (mega 150px 100px 10px) (kilo 75px 50px 5px);
   $minSize = 45px 30px 5px
 
   for $sponsor in $sponsorSizes {
     &-{$sponsor[0]} {
       $marginSize = min($minSize[2], ($sponsor[3]) / 2);
 
-      .helper-link-wide img {
+      .helper-link-wide {
         width: max($minSize[0], $sponsor[1] / 2);
       }
 
-      .helper-link-tall img {
+      .helper-link-tall {
         height: max($minSize[1], $sponsor[2] / 2);
       }
 
       .helper-link {
-        margin: ($marginSize);
+        padding: ($marginSize);
       }
     }
   }
@@ -441,18 +452,21 @@ $home-light-section {
 
     for $sponsor in $sponsorSizes {
       &-{$sponsor[0]} {
-        $marginSize = ($sponsor[3]);
+        $marginSize = ($sponsor[3]) * 2;
+        $outerMargin = ~min($marginSize, $punit);
+        margin-left: $outerMargin;
+        margin-right: $outerMargin;
 
-        .helper-link-wide img {
+        .helper-link-wide {
           width: ($sponsor[1]);
         }
 
-        .helper-link-tall img {
+        .helper-link-tall {
           height: ($sponsor[2]);
         }
 
         .helper-link {
-          margin: ($marginSize) ($marginSize * 3);
+          padding ($marginSize);
         }
       }
     }
@@ -471,5 +485,3 @@ $home-light-section {
   margin-top: 200px;
   color: $grayLight;
 }
-
-//stylings for the horizontal lines in the sponsorship header sections.
